[gd_scene load_steps=6 format=3 uid="uid://c13dadqbljqlu"]

[ext_resource type="Script" path="res://src/ui_parts/export_menu.gd" id="1_objnb"]
[ext_resource type="PackedScene" uid="uid://xh26qa68xed4" path="res://src/ui_widgets/svg_preview.tscn" id="2_ewk0a"]
[ext_resource type="FontFile" uid="uid://clpf84p1lfwlp" path="res://visual/fonts/Font.ttf" id="5_s3e6m"]
[ext_resource type="PackedScene" uid="uid://dbu1lvajypafb" path="res://src/ui_widgets/dropdown.tscn" id="5_y6ex0"]
[ext_resource type="PackedScene" uid="uid://dad7fkhmsooc6" path="res://src/ui_widgets/number_edit.tscn" id="6_w1sag"]

[node name="ExportMenu" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.0
offset_top = -2.0
offset_right = 2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"OverlayPanel"
script = ExtResource("1_objnb")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TexturePreview" parent="VBoxContainer/HBoxContainer" instance=ExtResource("2_ewk0a")]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 160)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="DimensionsLabel" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.866667, 0.866667, 0.866667, 1)
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1

[node name="FallbackFormatLabel" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 14
horizontal_alignment = 1

[node name="FormatHBox" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/FormatHBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 14

[node name="Dropdown" parent="VBoxContainer/HBoxContainer/VBoxContainer/FormatHBox" instance=ExtResource("5_y6ex0")]
layout_mode = 2
values = PackedStringArray("svg", "png", "jpg", "webp")

[node name="QualityRelated" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="LosslessCheckBox" type="CheckBox" parent="VBoxContainer/HBoxContainer/VBoxContainer/QualityRelated"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
focus_mode = 0
mouse_default_cursor_shape = 2
button_pressed = true

[node name="QualityHBox" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer/QualityRelated"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/QualityRelated/QualityHBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 12

[node name="Quality" parent="VBoxContainer/HBoxContainer/VBoxContainer/QualityRelated/QualityHBox" instance=ExtResource("6_w1sag")]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
max_value = 100.0
initial_value = 75.0
allow_lower = false
allow_higher = false
is_float = false

[node name="ScaleContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer/ScaleContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/ScaleContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12

[node name="Scale" parent="VBoxContainer/HBoxContainer/VBoxContainer/ScaleContainer/HBoxContainer" instance=ExtResource("6_w1sag")]
unique_name_in_owner = true
custom_minimum_size = Vector2(46, 22)
layout_mode = 2
initial_value = 8.0
allow_lower = false
allow_higher = false

[node name="FinalDimensions" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/ScaleContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.666667, 0.666667, 0.666667, 1)
theme_override_fonts/font = ExtResource("5_s3e6m")
theme_override_font_sizes/font_size = 10

[node name="ButtonContainer" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="CancelButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 6
focus_mode = 0
mouse_default_cursor_shape = 2

[node name="ExportButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 6
focus_mode = 0
mouse_default_cursor_shape = 2

[connection signal="toggled" from="VBoxContainer/HBoxContainer/VBoxContainer/QualityRelated/LosslessCheckBox" to="." method="_on_lossless_check_box_toggled"]
